compiler/tools/fpp-to-dict/test/top/invalidUserDataSizeConstant.ref.txt
fpp-to-dict
[ local path prefix ]/tools/fpp-to-dict/test/top/invalidUserDataSizeConstant.fpp:23.1
topology T {}
^
error: invalid symbol DpCfg: Fw.DpCfg.CONTAINER_USER_DATA_SIZE must be a constant symbol
symbol is defined here:
[ local path prefix ]/tools/fpp-to-dict/test/top/invalidUserDataSizeConstant.fpp:18.5
    constant DpCfg = {
    ^
